--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,8 @@ android {
         }
     }
 
-    // Enables data binding.
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 
 }
@@ -50,6 +49,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$version_kotlin"
 
     // Support libraries
+    //noinspection GradleDependency
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
 
     // Android KTX
