--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "http://jcenter.bintray.com"}
     }
 
     dependencies {
